--- a/src/main/resources/templates/analysis.html
+++ b/src/main/resources/templates/analysis.html
@@ -11,8 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
     <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
     <style>
         #topBtn {
             display: none;
@@ -276,10 +278,96 @@
                 </form>
         </div>
         <div class="col">
+            <div style="width: 1000px">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col" style="text-align: center">
+                        <br>
+                        <h5 id = "ctrLabel" style="text-align: center">CTR</h5>
+                        <canvas id="chart1" name="chart1" style="width: 100px; height: 100px"></canvas>
+                    </div>
+                    <div class="col" style="text-align: center">
+                        <br>
+                        <h5 id = "convLabel" style="text-align: center">%Конверсии</h5>
+                        <canvas id="chart2" name="chart1" style="width: 100px; height: 100px"></canvas>
+                    </div>
+                    <div class="col">
+                        <br>
+                        <button class="btn btn-outline-primary me-2" id="save-pdf" style="background-color: white; color: black; border-color: white">
+                            <img src="/static/images/download.png" alt="Скачать" height="30" width="30">
+                        </button>
+                    </div>
+                    <script th:inline="javascript">
+                        // Получение данных с помощью Thymeleaf
+                        var data1 = [[${data1}]];
+                        var data2 = [[${data2}]];
+
+                        var ctx = document.getElementById('chart1').getContext('2d');
+                        var ctx1 = document.getElementById('chart2').getContext('2d');
+                        var myChart = new Chart(ctx, {
+                            type: 'pie',
+                            data: {
+                                labels: [
+                                    'Показы',
+                                    'Клики'
+                                ],
+                                datasets: [{
+                                    label: 'Количество',
+                                    data: JSON.parse(data1),
+                                    backgroundColor: [
+                                        'rgb(224, 224, 224)',
+                                        'rgb(255, 194, 75)'
+                                    ],
+                                    hoverOffset: 1
+                                }]
+                            }
+                        });
+                        var myChart = new Chart(ctx1, {
+                            type: 'pie',
+                            data: {
+                                labels: [
+                                    'Клики',
+                                    'Конверсии'
+                                ],
+                                datasets: [{
+                                    label: 'Количество',
+                                    data: JSON.parse(data2),
+                                    backgroundColor: [
+                                        'rgb(224, 224, 224)',
+                                        'rgb(255, 194, 75)'
+                                    ],
+                                    hoverOffset: 1
+                                }]
+                            }
+                        });
+                    </script>
+                </div>
+                <script>
+                    document.getElementById('save-pdf').addEventListener('click', function() {
+                        var doc = new jsPDF();
+                        var chartCanvas1 = document.getElementById('ctrLabel');
+                        var chartImage1 = chartCanvas1.toDataURL('image/png');
+                        doc.addImage(chartImage1, 'PNG', 50, 10, 50, 20);
+
+                        var chartCanvas2 = document.getElementById('chart1');
+                        var chartImage2 = chartCanvas2.toDataURL('image/png');
+                        doc.addImage(chartImage2, 'PNG', 50, 50, 100, 100);
+
+                        var chartCanvas4 = document.getElementById('convLabel');
+                        var chartImage4 = chartCanvas4.toDataURL('image/png');
+                        doc.addImage(chartImage4, 'PNG', 50, 170, 50, 20);
+
+                        var chartCanvas3 = document.getElementById('chart2');
+                        var chartImage3 = chartCanvas3.toDataURL('image/png');
+                        doc.addImage(chartImage3, 'PNG', 50, 210, 100, 100);
+                        // сохраняем PDF-файл на устройстве
+                        doc.save('report.pdf');
+                    });
+                </script>
+            </div>
             <br>
-            <h4>Чистка </h4>
             <h5>все запросы представлены в таблице ниже 👇</h5>
-            <label style="color: dimgrey" th:text="'Примененные фильтры: ' + ${filters}"></label>
+            <label id="filters" style="color: dimgrey" th:text="'Примененные фильтры: ' + ${filters}"></label>
             <div class="row">
                 <div class="col" style="padding-left: 5px">
                     <label> </label>
